--- a/build.gradle
+++ b/build.gradle
@@ -16,30 +16,35 @@
 
 // Apply the java-library plugin to add support for Java Library
 //apply plugin: 'idea'
+import org.asciidoctor.gradle.AsciidoctorTask
 
-//
-//plugins {
-//    id 'org.asciidoctor.convert' version '1.5.6' apply false
-//}
-
+plugins {
+    id 'org.asciidoctor.convert' version '1.5.6' apply false
+}
 // In this section you declare where to find the dependencies of your project
 allprojects {
     repositories {
         jcenter()
     }
 
-    apply plugin: 'java-library'
+    version = '0.2.1'
+    group = 'org.blockchain_innovation.factom'
 }
 
 project(':factom-client-api') {
+    apply plugin: 'java'
+
     dependencies {
-        api 'org.slf4j:slf4j-api:1.7.25'
+//        api 'org.slf4j:slf4j-api:1.7.25'
     }
 }
 
 project(':factom-client-impl') {
+
+    apply plugin: 'java'
     dependencies {
         compile project(':factom-client-api')
+        compile 'org.slf4j:slf4j-api:1.7.25'
 
         testCompile 'org.mock-server:mockserver-netty:5.4.1'
         testCompile 'org.mock-server:mockserver-client-java:5.4.1'
@@ -48,16 +53,19 @@ project(':factom-client-impl') {
     }
 }
 project(':json-converter-gson') {
+    apply plugin: 'java'
+
     dependencies {
         compile project(':factom-client-api')
-        api 'com.google.code.gson:gson:2.8.5'
+        compile 'com.google.code.gson:gson:2.8.5'
     }
 }
 
 project(':factom-client-tests') {
+    apply plugin: 'java'
     dependencies {
-        api project(':factom-client-impl')
-        api project(':json-converter-gson')
+        compile project(':factom-client-impl')
+        compile project(':json-converter-gson')
         testCompile 'org.mock-server:mockserver-netty:5.4.1'
         testCompile 'org.mock-server:mockserver-client-java:5.4.1'
         testCompile 'junit:junit:4.12'
@@ -66,23 +74,47 @@ project(':factom-client-tests') {
 }
 
 
-dependencies {
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
+project(':docs') {
 
 
+    buildscript {
+        repositories {
+            jcenter()
+        }
 
-}
-
-sourceSets {
-    main {
-        java {
-            srcDir 'src/main/java'
+        dependencies {
+            classpath 'org.asciidoctor:asciidoctor-gradle-plugin:1.5.6'
+            classpath 'org.asciidoctor:asciidoctorj-epub3:1.5.0-alpha.6'
+            classpath 'org.asciidoctor:asciidoctorj-pdf:1.5.0-alpha.15'
         }
     }
-    test {
-        java {
-            srcDir 'src/test/java'
-        }
-    }
-}
+    apply plugin: 'java'
+    apply plugin: 'org.asciidoctor.convert'
 
+
+    tasks.withType(AsciidoctorTask) { task ->
+
+        sources {
+            include 'README.adoc'
+        }
+        attributes 'sourcedir': project.sourceSets.main.java.srcDirs[0],
+                'source-highlighter': 'coderay',
+                experimental: true,
+                toc: 'right',
+                idprefix: '',
+                idseparator: '-'
+    }
+
+    task html5(type: AsciidoctorTask, description: 'Generates single page HTML') {
+        backends 'html5'
+    }
+
+    task pdf(type: AsciidoctorTask, description: 'Generates PDF') {
+        backends 'pdf'
+    }
+
+    task epub3(type: AsciidoctorTask, description: 'Generates EPUB3') {
+        backends 'epub3'
+    }
+    defaultTasks 'html5'
+}
