--- a/settings.gradle
+++ b/settings.gradle
@@ -16,6 +16,7 @@
 /*
 // To declare projects as part of a multi-project build use the 'include' method
 */
-include ':factom-client-api', ':factom-client-impl', ':json-converter-gson', ':factom-client-tests', ':docs', 'osgi'
+include ':factom-client-api', ':factom-client-impl', ':json-converter-gson', ':json-converter-jee', ':factom-client-tests', ':docs', 'osgi'
 rootProject.name = 'factom-java'
+include 'json-converter-jee'
 
