--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ project(':factom-client-api') {
     apply plugin: 'java'
 
     dependencies {
+        compileOnly 'javax.enterprise:cdi-api:2.0.SP1'
 //        api 'org.slf4j:slf4j-api:1.7.25'
     }
 }
@@ -48,6 +49,7 @@ project(':factom-client-impl') {
     dependencies {
         compile project(':factom-client-api')
         compile 'org.slf4j:slf4j-api:1.7.25'
+        compileOnly 'javax.enterprise:cdi-api:2.0.SP1'
 
         testCompile 'org.mock-server:mockserver-netty:5.4.1'
         testCompile 'org.mock-server:mockserver-client-java:5.4.1'
@@ -77,6 +79,7 @@ project(':json-converter-gson') {
     dependencies {
         compile project(':factom-client-api')
         compile 'com.google.code.gson:gson:2.8.5'
+        compileOnly 'javax.enterprise:cdi-api:2.0.SP1'
         testCompile 'junit:junit:4.12'
         testCompile project(':factom-client-impl')
     }
@@ -96,6 +99,21 @@ project(':json-converter-jee') {
     }
 }
 
+project(':jee-support') {
+    apply plugin: 'java'
+
+    dependencies {
+        compile project(':factom-client-impl')
+        compile project(':json-converter-jee')
+        compileOnly 'javax.enterprise:cdi-api:2.0.SP1'
+        testCompile 'javax.enterprise:cdi-api:2.0.SP1'
+        testCompile 'org.jboss.weld:weld-core-impl:3.0.5.Final'
+        testCompile 'org.jboss.weld.se:weld-se-core:3.0.5.Final'
+        testCompile 'org.jboss.weld:weld-junit4:1.3.0.Final'
+        testCompile 'org.jboss.arquillian.container:arquillian-weld-embedded:2.0.0.Final'
+        testCompile 'junit:junit:4.12'
+    }
+}
 
 project(':factom-client-tests') {
     apply plugin: 'java'
