--- a/build.gradle
+++ b/build.gradle
@@ -107,15 +107,19 @@ project(':jee-support') {
         compile project(':factom-client-impl')
 //        compile project(':json-converter-jee')
         compile project(':json-converter-gson') //fixme
-        compileOnly 'javax.enterprise:cdi-api:2.0.SP1'
-        testCompile 'javax.enterprise:cdi-api:2.0.SP1'
-        testCompile 'org.jboss.weld:weld-core-impl:3.0.5.Final'
-        testCompile 'org.jboss.weld.se:weld-se-core:3.0.5.Final'
-        testCompile 'org.jboss.weld:weld-junit4:1.3.0.Final'
-        testCompile 'org.jboss.arquillian.container:arquillian-weld-embedded:2.0.0.Final'
+//        compileOnly 'javax.enterprise:cdi-api:2.0.SP1'
+//        compileOnly 'javax.javaee-api:7.0'
+//        testCompile 'javax.enterprise:cdi-api:2.0.SP1'
+        compileOnly 'javax:javaee-api:7.0'
+//        testCompile 'org.jboss.weld:weld-core-impl:3.0.5.Final'
+//        testCompile 'org.jboss.weld.se:weld-se-core:3.0.5.Final'
+//        testCompile 'org.jboss.weld:weld-junit4:1.3.0.Final'
+//        testCompile 'org.jboss.arquillian.container:arquillian-weld-embedded:2.0.0.Final'
+        testCompile 'org.jboss.arquillian.container:arquillian-glassfish-embedded-3.1:1.0.2'
+        testCompile 'org.glassfish.main.extras:glassfish-embedded-all:5.0'
         testCompile 'org.jboss.arquillian.junit:arquillian-junit-container:1.4.0.Final'
-        testCompile 'org.glassfish:javax.json:1.1.2'
-        testCompile 'org.eclipse:yasson:1.0.1'
+//        testCompile 'org.glassfish:javax.json:1.1.2'
+//        testCompile 'org.eclipse:yasson:1.0.1'
         compile 'com.google.code.gson:gson:2.8.5' //fixme
         testCompile 'junit:junit:4.12'
     }
