--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ import org.asciidoctor.gradle.AsciidoctorTask
 
 plugins {
     id 'org.asciidoctor.convert' version '1.5.6' apply false
+    id 'org.springframework.boot' version '2.0.5.RELEASE' apply false
 }
 
 // In this section you declare where to find the dependencies of your project
@@ -27,15 +28,27 @@ allprojects {
     repositories {
         jcenter()
     }
-
     version = '0.2.1'
     group = 'org.blockchain_innovation.factom'
+
+
 }
+
+subprojects {
+    tasks.withType(JavaCompile) {
+        options.encoding = "UTF-8"
+    }
+}
+
+
 
 project(':factom-client-api') {
 
 
     apply plugin: 'java'
+    tasks.withType(JavaCompile) {
+        options.encoding = "UTF-8"
+    }
 
     dependencies {
         compileOnly 'javax.enterprise:cdi-api:2.0.SP1'
@@ -107,22 +120,37 @@ project(':jee-support') {
         compile project(':factom-client-impl')
 //        compile project(':json-converter-jee')
         compile project(':json-converter-gson') //fixme
-//        compileOnly 'javax.enterprise:cdi-api:2.0.SP1'
-//        compileOnly 'javax.javaee-api:7.0'
-//        testCompile 'javax.enterprise:cdi-api:2.0.SP1'
         compileOnly 'javax:javaee-api:7.0'
-//        testCompile 'org.jboss.weld:weld-core-impl:3.0.5.Final'
-//        testCompile 'org.jboss.weld.se:weld-se-core:3.0.5.Final'
-//        testCompile 'org.jboss.weld:weld-junit4:1.3.0.Final'
-//        testCompile 'org.jboss.arquillian.container:arquillian-weld-embedded:2.0.0.Final'
         testCompile 'org.jboss.arquillian.container:arquillian-glassfish-embedded-3.1:1.0.2'
         testCompile 'org.glassfish.main.extras:glassfish-embedded-all:5.0'
         testCompile 'org.jboss.arquillian.junit:arquillian-junit-container:1.4.0.Final'
-//        testCompile 'org.glassfish:javax.json:1.1.2'
-//        testCompile 'org.eclipse:yasson:1.0.1'
         compile 'com.google.code.gson:gson:2.8.5' //fixme
         testCompile 'junit:junit:4.12'
     }
+}
+
+project(':spring-support') {
+
+    repositories {
+        jcenter()
+    }
+    apply plugin: 'java'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+
+    dependencies {
+        compile project(':factom-client-impl')
+        testCompile project(':json-converter-gson')
+        testCompile 'com.google.code.gson:gson:2.8.5'
+        testCompile 'junit:junit:4.12'
+        testCompile 'javax.enterprise:cdi-api:2.0.SP1'
+        compile('org.springframework.boot:spring-boot-starter')
+        testCompile('org.springframework.boot:spring-boot-starter-test')
+
+    }
+
+
+
 }
 
 project(':factom-client-tests') {
@@ -143,6 +171,15 @@ project(':factom-client-tests') {
 
 
 project(':docs') {
+
+    def exportedProjects = [
+            ":factom-client-api",
+            ":factom-client-impl",
+            ":factom-client-offline-signing",
+            ":json-converter-gson",
+            ":json-converter-jee",
+            ":jee-support"
+    ]
 
 
     buildscript {
@@ -184,5 +221,14 @@ project(':docs') {
     task epub3(type: AsciidoctorTask, description: 'Generates EPUB3') {
         backends 'epub3'
     }
-    defaultTasks 'html5'
+
+    task javadocs(type: Javadoc) {
+        source exportedProjects.collect { project(it).sourceSets.main.allJava }
+        classpath = files(exportedProjects.collect { project(it).sourceSets.main.compileClasspath })
+        destinationDir = file("${buildDir}/docs/javadoc")
+        options.encoding = "UTF-8"
+
+    }
+
+    defaultTasks 'html5', 'javadocs'
 }
