--- a/settings.gradle
+++ b/settings.gradle
@@ -16,6 +16,6 @@
 /*
 // To declare projects as part of a multi-project build use the 'include' method
 */
-include ':factom-client-api', ':factom-client-impl', ':factom-client-offline-signing', ':json-converter-gson', ':json-converter-jee', ':factom-client-tests', ':jee-support', ':spring-support', ':docs'
+include ':factom-client-api', ':factom-client-impl', ':factom-client-offline-signing', ':json:json-converter-gson', ':json:json-converter-jee', ':factom-client-tests', ':jee-support', ':spring-support', ':docs'
 rootProject.name = 'factom-java'
 
